--- a/src/components/AddArticleHome/style.scss
+++ b/src/components/AddArticleHome/style.scss
@@ -1,3 +1,8 @@
 .add-article-home-wrapper {
-  margin-top: 60px;
+  margin-top: 70px;
+}
+
+.h1 {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
