--- a/src/components/ArticlePreview/style.scss
+++ b/src/components/ArticlePreview/style.scss
@@ -1,7 +1,7 @@
 .article-preview-wrapper {
   margin-top: 24px;
 
-  .preview-container {
+  .preview-container-wrapper {
     height: 70vh;
     overflow-y: scroll;
     margin-top: 24px;
