--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -1,7 +1,11 @@
 .add-login-wrapper {
-  margin-top: 60px;
+  margin-top: 100px;
 
   .row {
+    .col-sm-8.col-md-6 {
+      margin: 0 auto;
+    }
+
     .card {
       margin: 0 auto;
     }
